Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.9.1 (TBD)
-----------

- setuptools added to pyproject.toml. Its pkg_resources module is used by the
  CLI (#1191).

1.9.0 (2023-01-30)
------------------

- CITATION.txt has been replaced by a new CITATION.cff file and the credits
  have been updated.
- In setup.py the distutils (deprecated) logger is no longer used.

1.9b2 (2023-01-22)
------------------

- Add Feature.__geo_interface__ property (#1181).
- Invalid creation options are filtered and ignored (#1180).
- The readme doc has been shortened and freshened up, with a modern example for
  version 1.9.0 (#1174).
- The Geometry class now provides and looks for __geo_interface__ (#1174).
- The top level fiona module now exports Feature, Geometry, and Properties
  (#1174).
- Functions that take Feature or Geometry objects will continue to take dicts
  or objects that provide __geo_interface__ (#1177). This reverses the
  deprecation introduced in 1.9a2.
- Python ignores SIGPIPE by default. By never catching BrokenPipeError via
  `except Exception` when, for example, piping the output of rio-shapes to
  the Unix head program, we avoid getting an unhandled BrokenPipeError message
  when the interpreter shuts down (#2689).

1.9b1 (2022-12-13)
------------------

New features:

* Add listdir and listlayers method to io.MemoryFile (resolving #754).
* Add support for TIN and triangle geometries (#1163).
* Add an allow_unsupported_drivers option to fiona.open() (#1126).
* Added support for the OGR StringList field type (#1141).

Changes and bug fixes:

* Missing and unused imports have been added or removed.
* Make sure that errors aren't lost when a collection can't be saved properly
  (#1169).
* Ensure that ZipMemoryFile have the proper GDAL name after creation so that we
  can use listdir() (#1092).
* The fiona._loading module, which supports DLL loading on Windows,